--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://priyansh-garg.github.io/portfolio",
   "name": "portfolio-techstyle-react",
   "version": "0.1.0",
   "private": true,
@@ -14,7 +15,11 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    
+    
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -36,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
