Hosting directed to homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://priyansh-garg.github.io/portfolio",
+  "homepage": "https://priyansh-garg.github.io/",
   "name": "portfolio-techstyle-react",
   "version": "0.1.0",
   "private": true,
@@ -15,11 +15,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    
-    
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
